--- a/linear_slider_moveit_config/config/joint_limits.yaml
+++ b/linear_slider_moveit_config/config/joint_limits.yaml
@@ -8,12 +8,13 @@ default_acceleration_scaling_factor: 1.0
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 joint_limits:
-  $(var prefix)joint1:
-    max_position: 0.41
-    min_position: -0.41
-    has_velocity_limits: true
-    max_velocity: 0.50
-    has_acceleration_limits: true
-    max_acceleration: 0.25
-    has_jerk_limits: true
-    max_jerk: 100.0
+    $(var prefix)joint1:
+        max_position: 0.41
+        min_position: -0.41
+        has_velocity_limits: true
+        max_velocity: 0.50
+        has_acceleration_limits: true
+        max_acceleration: 0.25
+        has_jerk_limits: true
+        max_jerk: 100.0
+# {'robot_description_planning': {'default_velocity_scaling_factor': 1.0, 'default_acceleration_scaling_factor': 1.0, 'joint_limits': {'$(var prefix)joint1': {'max_position': 0.41, 'min_position': -0.41, 'has_velocity_limits': True, 'max_velocity': 0.5, 'has_acceleration_limits': True, 'max_acceleration': 0.25, 'has_jerk_limits': True, 'max_jerk': 100.0}}}}
