--- a/linear_slider_description/config/joint_limits.yaml
+++ b/linear_slider_description/config/joint_limits.yaml
@@ -15,3 +15,5 @@ joint_limits:
         max_velocity: 0.5
         has_acceleration_limits: true
         max_acceleration: 0.2
+        has_jerk_limits: true
+        max_jerk: 10.0
