--- a/linear_slider_controllers/config/linear_slider_controllers.yaml
+++ b/linear_slider_controllers/config/linear_slider_controllers.yaml
@@ -27,14 +27,14 @@ linear_slider_controller:
         gains: # required for velocity interface
             $(var prefix)joint1:
                 ff_velocity_scale: 1.0
-                p: 6.0
-                i: 2.0
-                d: 2.0
-
-                # p: 10.0
+                # p: 6.0
                 # i: 2.0
-                # d: 5.0
-                # i_clamp: 1.0
+                # d: 2.0
+
+                p: 10.0
+                i: 2.0
+                d: 5.0
+                i_clamp: 1.0
 
         state_publish_rate: 100.0 # defaults to 50
         action_monitor_rate: 50.0 # defaults to 20
