--- a/linear_slider_controllers/config/linear_slider_controllers.yaml
+++ b/linear_slider_controllers/config/linear_slider_controllers.yaml
@@ -27,14 +27,25 @@ linear_slider_controller:
         gains: # required for velocity interface
             $(var prefix)joint1:
                 ff_velocity_scale: 1.0
+                # Mock hardware + UR5e
+                p: 100.0
+                i: 0.0
+                d: 0.0
+                # MOCK HARDWARE  --   TODO: Is this different because of the lack of a transmission interface? The mass of the moving base becomes less significant with our ball screw, which isn't modeled in the URDF.
+                # p: 1000.0
+                # i: 10.0
+                # d: 1.0
+
+                # REAL HARDWARE
                 # p: 6.0
                 # i: 2.0
                 # d: 2.0
 
-                p: 10.0
-                i: 2.0
-                d: 5.0
-                i_clamp: 1.0
+                # p: 10.0
+                # i: 2.0
+                # d: 5.0
+                # i_clamp: 1.0
+                
 
         state_publish_rate: 100.0 # defaults to 50
         action_monitor_rate: 50.0 # defaults to 20
@@ -46,7 +57,7 @@ linear_slider_controller:
             stopped_velocity_tolerance: 0.01 # Defaults to 0.01
             $(var prefix)joint1:
                 goal: 0.05 # position tolerace (m)
-                # trajectory: 0.20
+                trajectory: 0.20
 
         allow_nonzero_velocity_at_trajectory_end: false
 
