--- a/linear_slider_controllers/config/linear_slider_controllers.yaml
+++ b/linear_slider_controllers/config/linear_slider_controllers.yaml
@@ -28,10 +28,10 @@ linear_slider_controller:
         gains: # required for velocity interface
             $(var prefix)joint1:
                 # MOCK HARDWARE  --   TODO: Is this different because of the lack of a transmission interface? The mass of the moving base becomes less significant with our ball screw, which isn't modeled in the URDF.
-                # ff_velocity_scale: 1.0 # This throws a warning, ignore it.
-                # p: 1000.0
-                # i: 10.0
-                # d: 1.0
+                ff_velocity_scale: 1.0 # This throws a warning, ignore it.
+                p: 1000.0
+                i: 10.0
+                d: 1.0
 
                 
                 # p: 1000.0
@@ -43,10 +43,11 @@ linear_slider_controller:
                 # p: 1000.0
                 # i: 10.0
                 # d: 1.0
-                ff_velocity_scale: 0.0
-                p: 100.0
-                i: 5.0
-                d: 4.0
+
+                # ff_velocity_scale: 0.0
+                # p: 100.0
+                # i: 5.0
+                # d: 4.0
 
                 # i_clamp: 1.0
                 
